<resources>
    <string name="app_name">MusicPlayer_IPO</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="lblRegistroNuevoUsuario">Registro nuevo usuario</string>
    <string name="Nombre">Nombre</string>
    <string name="nombreUser">Nombre usuario</string>
    <string name="Correo_electrónico">Correo electrónico</string>
    <string name="Contraseña">Contraseña</string>
    <string name="confirmarContraseña">Confirma contraseña</string>
    <string name="numeroTelefono">Número teléfono</string>
    <string name="FechaNacimiento">Fecha de Nacimiento</string>
    <string name="VolverInicio">Volver </string>

    <string name="nombreUsuario">Nombre usuario</string>
    <string name="IniciarSesión">Iniciar sesión</string>
    <string name="Registrarse">Crear cuenta</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="artistas">Artistas</string>
    <string name="albumes">Álbumes</string>

    <string name="inicio">Inicio</string>
    <string name="perfil">Perfil</string>

    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="action_configuracon">Configuracion</string>
    <string name="info">Destalles</string>

</resources>