<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/inicio"
        android:icon="@drawable/icono_casa"
        android:title="@string/inicio"
        />

    <item
        android:id="@+id/artistas"
        android:icon="@drawable/icono_cantante"
        android:title="Artistas"

        />

    <item
        android:id="@+id/albumes"
        android:icon="@drawable/icono_musica_favorita"
        android:title="@string/albumes"

        />
    <item
        android:id="@+id/canciones"
        android:icon="@drawable/icono_cancion"
        android:title="Canciones"

        />
    <item
        android:id="@+id/perfil"
        android:icon="@drawable/icono_perfil"
        android:title="@string/perfil" />


</menu>