<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_dos"
    android:orientation="vertical"
    android:paddingTop="50dp"
    tools:context=".Presentacion.main_activity"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"

        android:src="@drawable/icono_logo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="7dp"
        android:layout_weight="2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtNombreUsuarioLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="30dp"
        android:layout_weight="1"
        android:drawableStart="@drawable/icono_perfil"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/nombreUsuario"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/txtPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"

        android:layout_marginBottom="7dp"
        android:layout_weight="1"
        android:autofillHints=""
        android:drawableStart="@drawable/icono_contrasena"
        android:drawablePadding="15dp"
        android:hint="@string/Contraseña"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textSize="16dp" />


    <Button
        android:id="@+id/btnInicio"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="3"
        android:textStyle="bold"
        android:backgroundTint="@color/pink"
        android:onClick="oyente_btnIniciarAplicacion"
        android:text="@string/IniciarSesión"
        android:textSize="16dp" />


    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_weight="3"
        android:backgroundTint="@color/pink"
        android:textSize="16dp"
        android:textStyle="bold"
        android:onClick="oyente_btnRegristroAplicacion"
        android:text="@string/Registrarse" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:contentDescription="google"

            android:cropToPadding="true"
            android:scaleType="centerInside"
            android:src="@drawable/icono_google" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="false"
            android:contentDescription="facebook"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:cropToPadding="true"
            android:scaleType="centerInside"
            android:src="@drawable/icono_facebook"/>

    </LinearLayout>

</LinearLayout>